Attempt to fix mobile number on mobile issue

--- a/src/sass/alexisvincent.scss
+++ b/src/sass/alexisvincent.scss
@@ -94,19 +94,24 @@ body {
       font-size: 0.7em;
     }
 
-    a {
-      font-size: 3em;
-      color: black;
-      text-decoration: none;
-
-      span {
-        color: #4A90E2;
-        text-decoration: none;
-      }
-    }
-
     div {
       font-size: 1.7em;
+
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+
+      a {
+        font-size: 2em;
+        color: black;
+        text-decoration: none;
+
+        span {
+          color: #4A90E2;
+          text-decoration: none;
+        }
+      }
     }
   }
 }
